--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -18,8 +18,8 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
-
   max-height: 100%;
+  position: relative;
   &:dir(rtl) {
     font-family: "OHSavyonChenKipper", sans-serif;
   }
@@ -67,7 +67,7 @@
   border-radius: 0.4rem;
 
   @media (max-width: 768px) {
-    width: calc(100% -1.6rem);
+    width: calc(100% - 1.6rem);
   }
 }
 
@@ -84,4 +84,34 @@
   @media (max-width: 768px) {
     padding: 1rem 0.5rem;
   }
+}
+
+.closeButton {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  background: none;
+  border: none;
+  color: var(--red);
+  font-size: 2rem;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 60;
+  transition: all 0.3s ease;
+
+  &:dir(ltr) {
+    left: auto;
+    right: 1rem;
+  }
+}
+
+.closeButton:hover {
+  color: #ff5555;
+}
+
+button.closeButtonBottom {
+  padding: 0 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  z-index: 60;
 }
