--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --yellow: #f7c500;
   --red: #cb2424;
+  --dark-red: #b21d1d;
   --black: #1a1a1a;
   --link: #0070f3;
   --light-grey: #f5f5f5;
