--- a/src/components/Book/Controls/Controls.module.css
+++ b/src/components/Book/Controls/Controls.module.css
@@ -14,10 +14,12 @@ button.disabled {
   display: flex;
   gap: 0.4rem;
   align-items: center;
-  background-color: rgb(203, 36, 36);
+  justify-content: center;
+  background-color: var(--red);
   padding: 0.8rem 1.6rem;
   border-radius: 0.4rem;
   font-size: 2.5rem;
+  min-width: 9rem;
   &:dir(rtl) {
     font-size: 1.8rem;
     flex-direction: row-reverse;
