--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -13,6 +13,7 @@
     color: var(--yellow);
     transition: color 0.3s ease;
     font-size: 2.4rem;
+    line-height: 0.6;
 
     &:hover {
       color: #ff6f00;
