--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -53,6 +53,12 @@
   }
 }
 
+.pageHeader {
+  font-size: 2.8rem;
+  margin-bottom: 1rem;
+  color: var(--red);
+}
+
 .pageContent {
   text-align: center;
   width: 100%;
