--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -55,11 +55,15 @@
 
 .pageHeader {
   font-size: 2.8rem;
-  margin-bottom: 1rem;
+  padding-bottom: 1rem;
   color: var(--red);
 
   &:dir(ltr) {
     font-size: 2.4rem;
+  }
+  &:dir(rtl) {
+    line-height: 0.8;
+    padding-bottom: 2.5rem;
   }
 }
 
@@ -71,8 +75,4 @@
   flex-direction: column;
   overflow: auto;
   overflow-x: hidden;
-
-  & > h2 {
-    color: var(--red);
-  }
 }
