--- a/src/components/NotFoundPage/page.module.css
+++ b/src/components/NotFoundPage/page.module.css
@@ -3,12 +3,14 @@
   line-height: 1;
   display: flex;
   gap: 1rem;
-  margin-bottom: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
 }
 
 .secondary {
   font-size: 4rem;
   line-height: 0.8;
+  padding-bottom: 1.5rem;
 }
 
 .action {
