--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,8 @@
   --social-hover: #ff6f00;
   --footer-height: 6rem;
   --footer-height-mobile: 2rem;
+  --header-height: 5rem;
+  --footer-height-he: 4.8rem;
   --border-white: 1px solid var(--white);
 }
 
