--- a/src/components/PageContainer/PageContainer.module.css
+++ b/src/components/PageContainer/PageContainer.module.css
@@ -1,6 +1,6 @@
 .main {
   margin: 0 auto;
-  padding-top: 5rem;
+  padding-top: var(--header-height);
   overflow: hidden;
   width: 100%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -18,6 +18,8 @@
   }
 
   &:dir(rtl) {
+    padding-top: var(--header-height-he);
+
     &:not(.legal) {
       font-family: "OHSavyonChenKipper", sans-serif;
     }
