--- a/src/components/Header/MobileNav/MobileNav.module.css
+++ b/src/components/Header/MobileNav/MobileNav.module.css
@@ -23,10 +23,10 @@
   background-color: rgba(51, 51, 51, 0.9);
   width: 80%;
   right: 0;
-  padding-top: var(--header-height-he);
+  top: var(--header-height-he);
 
   &:dir(ltr) {
-    padding-top: var(--header-height);
+    top: var(--header-height);
     right: auto;
     left: 0;
     align-items: baseline;
