--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,4 +9,5 @@
   z-index: 1000;
   padding: 0 1.6rem 0.8rem 1.6rem;
   background-color: rgba(51, 51, 51, 0.8);
+  min-height: var(--header-height);
 }
